<resources>
    <string name="app_name">NotesApp</string>
    <string name="myNotes">My Notes</string>
    <string name="searchNote">Search Note</string>
    <string name="noteTitle">Notes Title</string>
    <string name="noteSubTitle">Notes Sub Title</string>
    <string name="noteDescription">Enter Note</string>
    <string name="date">Date</string>
    <string name="addImage">Add Image</string>
    <string name="pickColor">Pick Color</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="web_url">Enter Url</string>
    <string name="cancel">cancel</string>
    <string name="ok">Ok</string>

</resources>