<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackgroundColor"
        tools:context=".view.CreateFragment">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/iback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/doneImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_check_circle_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/addNoteTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/noteTitle"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/textHintColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backImageView" />

        <TextView
            android:id="@+id/dateTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/date"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/textHintColor"
            android:textColorHint="@color/textHintColor"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addNoteTitleEditText" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTimeTextView">

            <View
                android:id="@+id/colorView"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/fabButtonColor" />

            <EditText
                android:id="@+id/addNoteSubTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/noteSubTitle"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/textHintColor"
                android:textSize="13sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutImag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/line1">


            <ImageView
                android:id="@+id/imgNote"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_delete"
                android:visibility="gone" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/lineWebUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutImag">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etWebLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/roboto_thin"
                    android:hint="@string/web_url"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:text="http://"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imgUrlDelete"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_cancel_24"
                    android:visibility="gone" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:visibility="gone"
            android:fontFamily="@font/roboto_bold"
            android:padding="10dp"
            android:textColor="@color/textHintColor"
            android:textColorHint="@color/textHintColor"
            android:textSize="12sp"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineWebUrl" />

        <EditText
            android:id="@+id/addNoteDescEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/noteDescription"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/textHintColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/noteMore"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_more_horiz_24"
                app:tint="@color/white" />

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>